<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="633dp"
    android:animateLayoutChanges="true"
    android:background="@color/white"
    android:backgroundTint="@color/light_grey_lightness"
    tools:context=".MainActivity"
    tools:ignore="RtlSymmetry"
    >

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="6dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/album_title"
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="34dp"
            android:text="@string/album"
            android:textColor="@color/medium_grey"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/album_name"
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/one_more_light_live"
            android:textColor="@color/night_sky"
            android:textSize="20sp"
            android:textStyle="normal"

            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/singer_title"

            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/Singer"
            android:textColor="@color/medium_grey"
            android:textSize="16sp"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/singer_name"

            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/linkin_park"
            android:textColor="@color/night_sky"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/genre_and_year"
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/_2017"
            android:textColor="@color/medium_grey"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fab"
            style="@style/Widget.AppTheme.FabPlayCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="10dp"
            android:checkable="true"
            android:contentDescription="@string/Точка"
            android:focusable="true"
            android:text="@string/extend_fab_text"
            android:textColor="@color/night_sky"
            android:textStyle="italic"
            android:textAllCaps="false"
            android:visibility="visible"
            app:icon="@drawable/ic_fab_box_24"
            app:maxImageSize="48dp"
            tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />


        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/list_box"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_marginTop="26dp"
            android:background="@color/white"
            android:visibility="visible">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:backgroundTint="@color/light_grey_lightness"
                android:contentDescription="@string/list_for_items_songs"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/song_card" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@color/dark_grey"
        android:visibility="gone" />

</FrameLayout>



